# test-MagmaComputer

./: .gitignore  README.md
splitter/: CMakeLists.txt  splitter.cpp  splitter.h
splitter/tests/files/: config.txt
